Stop overflow issue inside style.css, Align header with work items in index.html

--- a/style.css
+++ b/style.css
@@ -15,7 +15,13 @@ body {
   display: flex;
   flex-direction: column;
   height: 100vh;
+  overflow-x: hidden;
   font-family: Roboto, sans-serif;
+}
+
+header {
+  position: fixed;
+  width: 100%;
 }
 
 #nav-desktop {
@@ -26,10 +32,7 @@ body {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  position: fixed;
-  top: 10px;
-  left: 30px;
-  width: 80vw;
+  width: 100%;
 }
 
 #logo {
@@ -39,6 +42,7 @@ body {
   width: 150px;
   height: 60px;
   align-items: center;
+  margin-left: 6%;
   color: #edecff;
 }
 
@@ -46,19 +50,20 @@ body {
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: space-between;
+  justify-content: center;
   margin: 24px;
-  margin-top: 70px;
-  height: 80vh;
-  width: 90vw;
+  margin: 25% auto 4% auto;
+  padding-right: 60px;
+  width: 94%;
 }
 
-.headline h1 {
+.headline h1,
+.headline h2 {
   font-weight: 700;
-  padding: 10px 0 0;
   text-align: center;
+  justify-content: center;
+  align-items: center;
   margin-top: 23px;
-  margin-right: 2px;
   width: 100%;
   color: #7d73fc;
   font-size: 48px;
@@ -118,10 +123,9 @@ footer p {
 }
 
 .welcome-section {
-  display: flex;
   margin-top: 45px;
-  background: url("./assets/top-circles.svg") no-repeat;
-  flex-direction: column;
+  width: 100%;
+  background: url(./assets/Ellipse-18.svg) top left no-repeat, url(./assets/Ellipse-19.svg) right center no-repeat;
 }
 
 .social-media {
@@ -185,10 +189,9 @@ hr {
 }
 
 .project-item {
-  margin: 14px 0 24px;
+  margin: 30px 0 24px;
   display: flex;
   flex-direction: column;
-  height: 100vh;
   justify-content: space-around;
   width: 100vw;
   align-items: center;
@@ -221,8 +224,7 @@ hr {
   flex-direction: column;
   align-items: center;
   margin-top: 14px;
-  width: 375px;
-  height: 88%;
+  width: 100%;
 }
 
 .project-img {
@@ -235,7 +237,6 @@ hr {
   font-weight: 500;
   padding: 20px;
   font-style: normal;
-  margin-left: -14px;
   font-size: 32px;
   color: #fff;
 }
@@ -363,11 +364,11 @@ h3 {
 
 .contact-form {
   display: flex;
-  flex-direction: column;
-  justify-content: space-evenly;
-  width: 375px;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
   margin-top: 10px;
-  height: 700px;
+  flex-direction: column;
 }
 
 .contact-form .description {
@@ -392,28 +393,33 @@ form {
   width: 94%;
   height: 360px;
   margin-bottom: 10%;
-  margin-top: 10px;
+  margin-top: 30px;
   margin-left: 12px;
   text-align: center;
 }
 
+.menu-btn {
+  margin-right: 6%;
+}
+
 form input {
   height: 50px;
-  margin: 12px;
+  margin: 8px auto;
+  width: 93%;
   padding: 15px 16px;
 }
 
 textarea {
-  margin: 12px;
   min-height: 148px;
-  width: 327px;
+  width: 93%;
+  margin: 10px auto;
   padding: 15px 16px;
 }
 
 footer {
   display: flex;
   flex-direction: column;
-  width: 345px;
+  width: 100%;
   height: 356px;
   margin-bottom: -16px;
 }
